Change argument names, variable names, file names, README, etc

--- a/template/index.html
+++ b/template/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-  <title>Quizify</title>
+  <title>Namem</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body onload="init();">
 
-  <h1>Quizify</h1>
+  <h1>Namem</h1>
   <div id="reset" style="display:none;">
     <h2>You've gone through the whole roster.</h2>
     <button id="reset_button" onclick="init();">Reset</button>
