--- a/template/index.html
+++ b/template/index.html
@@ -66,6 +66,7 @@ function shuffle_array(arr) {
  * Shuffle them.
  */
 function initialize_roster_shuffle(num_people) {
+  roster = [];
   for ( var i = 0; i < num_people; i++) {
     var person = {};
     person.photo_file = './photos/' + i + '.png';
