--- a/template/index.html
+++ b/template/index.html
@@ -85,7 +85,7 @@ function init() {
   name_revealed = false;
   show('quiz');
   hide('reset');
-  initialize_roster_shuffle(16);
+  initialize_roster_shuffle( REPLACE_WITH_NUM_STUDENTS );
   show_next_question();
 }
 
